<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SLM-OspiUI</string>
    <string name="action_settings">Settings</string>
    
    <!-- Titles -->
   	<string name="str_circuit_info">Circuit Watering History</string>
    <string name="str_manual_op">Manual Operation</string>  
    <string name="str_program_schedule_summary">Program Schedule Summary</string>    
        
    
    <!-- Days of Week -->
    <string name="str_mon">Mon</string>
    <string name="str_tue">Tue</string>
    <string name="str_wed">Wed</string>
    <string name="str_thu">Thu</string>
    <string name="str_fri">Fri</string>
    <string name="str_sat">Sat</string>
    <string name="str_sun">Sun</string>        
    
    <!-- Labels -->
    <string name="str_active">Active</string>
    <string name="str_circuits_colon">Circuits: </string>
    <string name="str_days_colon">Days: </string>
    <string name="str_delete">Delete</string>
    <string name="str_disabled">Disabled</string>
    <string name="str_duration">Duration</string>
    <string name="str_duration_colon">Duration: </string>
    <string name="str_enabled">Enabled</string>
    <string name="str_hhmm_parens">(hh:mm)</string>
    <string name="str_manual">Manual</string>
    <string name="str_manual_mode">Manual Mode</string>
    <string name="str_mins">mins</string>
    <string name="str_program_colon">Program: </string>
    <string name="str_program_id_colon">Prog ID: </string>
    <string name="str_repeat_colon">Repeat: </string>
    <string name="str_running">Running</string>
    <string name="str_schedule">Schedule</string>
    <string name="str_set">Set</string>
    <string name="str_set_timer">Set Timer</string>
    <string name="str_submit">Submit</string>
    <string name="str_start_time_colon">Start Time: </string>
    <string name="str_summary">Summary</string>
    <string name="str_time_expired">Time Expired</string>
    <string name="str_time_rem">Time Remaining</string>
    <string name="str_timed">Timed</string>
   
    
    
    <!-- Hint Strings -->
    <string name="str_hint_c1">C1</string>
    <string name="str_hint_circuit">Circuit</string>
    <string name="str_hint_dashes"> --- </string>
    <string name="str_hint_disabled">disabled</string>
    <string name="str_hint_mm_ss">00:00</string>
    <string name="str_hint_num">   0</string>
    
     <!-- Dialog Box Text -->
    <string name="str_loading_data">Loading data. Please Wait.</string>
    <string name="str_retreiving_data">Retreiving data. Please Wait.</string>
    
   
    
       
    <!-- Weather Info for Activity -->
    <string name="str_forecast_data">Getting forecast data. Please Wait.</string>
    <string name="str_forecast">Weather Forecast for:  </string>
    <string name="str_date">Date:</string>
    <string name="str_high">High:</string>
    <string name="str_low">Low:</string>
    <string name="str_temperature">Temperature:</string>
    <string name="str_precip">Prob of Precip:</string>
    <string name="str_day">Day:</string>
    <string name="str_night">Night:</string>
    <string name="str_description">Description:</string>
    
    <string name="str_dashes2"> --- </string>
    <string name="str_comma"> ,  </string>
    <string name="str_colon"> :  </string>
    <string name="str_empty"> </string>
    
    
    
    <!--  Testing / Temp strings -->
    <string name="str_get"> GET </string>
    <string name="str_command"> /sn1 </string>
    <string name="str_result"> Result </string>

</resources>
