<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textSize="@dimen/app_font_size"
    >

	
	<Button
    	android:id="@+id/manual_mode_button"
  		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@style/SLMButton"
		android:text="@string/str_manual_mode"
		android:paddingRight="5dp"
		android:paddingLeft="5dp"
    	/>
 	<!-- android:textSize="@dimen/medium1_data_text_sz" -->

	<TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/str_empty"
       android:minWidth="3dp"
       />


	<Button
	    android:id="@+id/schedule_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="@style/SLMButton"
	    android:text="@string/str_schedule" 
	    android:paddingRight="5dp"
		android:paddingLeft="5dp"
	    />
 
</LinearLayout>
 
