<?xml version="1.0" encoding="utf-8"?>
<!-- Overall layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/layout_margin_medium"
    android:baselineAligned="false"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >
    
    <!-- marginStart was 12, now 10. is there a difference? 3/25/15 -->

    <!-- Add Toggle button -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/label_button_vertical_margin"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="6" >

        <!-- Add set timer button -->

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical" >

            <!-- Cir num & Name -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/circuit_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/str_hint_c1"
                    android:paddingTop="0dp"
                    android:textSize="@dimen/small_data_text_sz" 
                    />

                <TextView
                    android:id="@+id/circuit_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_hint_circuit"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:textSize="@dimen/xlarge_data_text_sz" 
                    />
            </LinearLayout>

            <!-- padding in this case padded within the textview. -->
            <Button
                android:id="@+id/cir_settimer_button"
                style="@style/SLMButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:minHeight="20dp"
                android:minWidth="36dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/str_set_timer"
                android:textSize="@dimen/label_text_sz" 
                />
        </LinearLayout>

        <ToggleButton
            android:id="@+id/cir_toggle_button"
            style="@style/SLMButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_weight="1"
            android:drawableBottom="@drawable/toggleindicator" 
            />


    </LinearLayout>

    <!-- DURATION mm:ss   Time Expired mm:ss -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/label_button_vertical_margin"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="start|bottom"
            android:labelFor="@+id/duration_stv"
            android:text="@string/str_duration"
            android:textSize="@dimen/label_text_sz" 
            />

        <com.slm_ospiui.STimeTextView
            android:id="@id/duration_stv"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="start|bottom"
            android:hint="@string/str_hint_mm_ss"
            android:textSize="@dimen/chron_font_size" 
            />

        <!-- Empty space -->
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:text="@string/str_empty"
            android:textSize="@dimen/label_text_sz" 
            />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="end|bottom"
            android:labelFor="@+id/chronometer_stv"
            android:text="@string/str_time_expired"
            android:textSize="@dimen/label_text_sz" 
            />

        <com.slm_ospiui.STimerView
            android:id="@+id/chronometer_stv"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|bottom"
            android:hint="@string/str_hint_mm_ss"
            android:textSize="@dimen/chron_font_size" 
            />
        <!--
      			<Chronometer
		        	android:id="@+id/chronometer"
		        	android:layout_height="match_parent"
		        	android:layout_width="0dip"		    		
		    		android:layout_weight="1"
		   			android:textSize="@dimen/chron_font_size"	
		    		android:gravity="center|bottom"	
		        	/>
        -->
    </LinearLayout>

</LinearLayout>